# react-native-privacy-guard-kit

./: .gitignore  CONTRIBUTING.md  PrivacyGuardKit.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/privacyguardkit/: PrivacyGuardKitModule.kt  PrivacyGuardKitPackage.kt  PrivacyGuardKitView.kt  PrivacyGuardKitViewManager.kt  Privacyguardkitmodule .kt  Screenshotobserver.kt  Secureview.kt  Secureviewmanager.kt
android/src/main/jni/react/renderer/components/PrivacyGuardKitViewSpec/: RNSecureViewComponentDescriptor.h
example/: app.json  package.json
example/android/: CMakeLists.txt  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/privacyguardkit/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile  PrivacyGuardKitExample-Bridging-Header.h
example/ios/PrivacyGuardKitExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/PrivacyGuardKitExample.xcodeproj/: project.pbxproj
example/ios/PrivacyGuardKitExample.xcodeproj/xcshareddata/xcschemes/: PrivacyGuardKitExample.xcscheme
example/ios/PrivacyGuardKitExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: AppSwitcherProtectionManager.swift  PrivacyGuardKit-Umbrella.h  PrivacyGuardKit.m  PrivacyGuardKit.swift  PrivacyGuardKitView.h  PrivacyGuardKitView.mm  RNSecureViewComponentView.h  RNSecureViewComponentView.mm  RNSecureViewManager.mm  ScreenCaptureManager.swift  ScreenshotDetectionManager.swift
src/: Hooks.ts  NativePrivacyGuardKit.ts  PrivacyGuardKitViewNativeComponent.ts  PrivacyGuardProvider.tsx  PrivacyGuardkitApi.ts  SecureView.tsx  index.tsx  types.ts
src/specs/: RNSecureViewNativeComponent.ts
